# quasigraph

./: .gitignore  LICENSE.txt  QuasiGraph.py  README.md  pyproject.toml  requirements.txt  setup.py
QuasiGraph/: __init__.py  deprecated_methods.py
examples/: Ag13.xyz  M55.xyz  Pt_bulk.xyz  cubic.vasp  id_424.xyz
quasigraph/: __init__.py  quasigraph.py
src/quasigraph/: __init__.py  ptable.py  quasigraph.py
